# torrentino

./: Cargo.toml  README.md
resources/: test_file_one_tracker.torrent
src/: lib.rs  main.rs
src/cli/: cli_args.rs  mod.rs
src/engine/: engine_events.rs  mod.rs  torrent_engine.rs
src/protocol/: mod.rs
src/protocol/entities/: mod.rs
src/protocol/entities/file/: mod.rs  torrent.rs  torrent_file.rs  torrent_info.rs  torrent_node.rs  torrent_tracker.rs
src/protocol/entities/messaging/: announce.rs  handshake.rs  messages.rs  mod.rs  requests.rs
src/protocol/net/: download_from_peer.rs  http_client.rs  mod.rs  network_client.rs  udp_client.rs
tests/: display_torrent_file.rs  download_torrent_file.rs  generate_announce_request.rs  obtain_connection_id.rs  test_cli.rs
