[package]
name = "torrentino"
edition = "2021"
version = "0.0.1"
description = "A blazingly fast torrent client"
authors = ["Almaz Murzabekov @ et al"]

[dependencies]
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11"
serde_with = "2.1.0"
clap = { version = "4.0.29", features = ["derive"] }
url = "2.3.1"
rand = "0.8.5"
byteorder = "1.4.3"
bincode = "1.3.3"
chrono = "0.4.23"
futures = "0.3"
sha-1 = "0.10.1"
bytes = "1.3.0"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
